# huffman

./: CMakeLists.txt  README.md
src/: huffman.cpp  huffman.hpp  hufftree.cpp  hufftree.hpp  main.cpp
